deployment/kubernetes/adworks-dev-media-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-processor
  labels:
    app: media-processor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: media-processor
  template:
    metadata:
      labels:
        app: media-processor
    spec:
      containers:
      - name: media-processor
        image: eworkspace/media-processor:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 0m
            memory: 256Mi
          limits:
            cpu: 600m
            memory: 512Mi
        volumeMounts:
        - name: data
          mountPath: /mnt
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: adworks-dev-shared
