deployment/kubernetes/adworks-media-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-processor
  labels:
    app: media-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-processor
  template:
    metadata:
      labels:
        app: media-processor
    spec:
      nodeSelector:
        power: high
      containers:
      - name: media-processor
        image: eworkspace/media-processor:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: 256Mi
          limits:
            memory: 512Mi
        securityContext:
          privileged: true
          # capabilities:
          #   add: ['SYS_ADMIN', 'DAC_READ_SEARCH']
        volumeMounts:
        - name: data
          mountPath: /mnt
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: adworks-shared
