deployment/kubernetes/ubuntu-shell.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu
  labels:
    app: ubuntu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
      - name: ubuntu
        image: ubuntu:16.04
        command: ["/bin/bash", "-c", "while true; do sleep 9999; done;"]
        resources: {}
          # requests:
          #   cpu: 100m
          #   memory: 256Mi
        securityContext:
          privileged: true
          # capabilities:
          #   add: ['SYS_ADMIN', 'DAC_READ_SEARCH']
        volumeMounts:
        - name: data
          mountPath: /mnt
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: adworks-shared
