deployment/kubernetes/adworks-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adworks-dashboard
  labels:
    app: adworks-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adworks-dashboard
  template:
    metadata:
      labels:
        app: adworks-dashboard
    spec:
      containers:
      - env:
        image: eworkspace/adworks.dashboard:latest
        imagePullPolicy: Always
        name: adworks-dashboard
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: adworks-dashboard
spec:
  selector:
    app: adworks-dashboard
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
