deployment/kubernetes/adworks-media-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adworks-api
  labels:
    app: adworks-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adworks-api
  template:
    metadata:
      labels:
        app: adworks-api
    spec:
      containers:
      - name: adworks-api
        image: eworkspace/adworks-api:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        securityContext:
          privileged: true
          # capabilities:
          #   add: ['SYS_ADMIN', 'DAC_READ_SEARCH']
        volumeMounts:
        - name: data
          mountPath: /mnt
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: adworks-shared
---
apiVersion: v1
kind: Service
metadata:
  name: adworks-api
spec:
  selector:
    app: adworks-api
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  sessionAffinity: ClientIP
  type: ClusterIP
